dev/test_programs/INVALID/group5/parser_invalid3.go
package parser_invalid3

func main(){

a:= 5
b:= 10

//no multiple returns accepted
s,t := compare(a,b)
println(s,t)

}
